# MetaCutX

./: .$architecture.drawio.bkp  .$architecture.drawio.dtmp  .clang-format  .gitignore  CMakeLists.txt  architecture.drawio  main.cpp  readme.md
App/MXPlayer/: CMakeLists.txt  FrameProvider.cpp  FrameProvider.h  PlayController.cpp  PlayController.h  PlayerSlider.qml  PlayerToolBox.qml  main.cpp  main.qml
App/MXResource/: CMakeLists.txt  libriry.qml  main.cpp  main.qml
App/MXTimeline/: CMakeLists.txt  Clip.qml  README.en.md  README.md  TrackHead.qml  main.cpp  main.qml  scale.qml
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appresourceEditor.exp  appresourceEditor.ilk  appresourceEditor.lib  appresourceeditor_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: codemodel-v2-00ca925d894e4fd1f1dc.json  index-2023-11-30T03-08-15-0889.json  target-all_qmllint-Debug-ccd619e6ba9278062662.json  target-all_qmllint_json-Debug-b7e2d34029ae6fa2dd29.json  target-appresourceEditor-Debug-4c548e89a918fc322bb0.json  target-appresourceEditor_autogen-Debug-a0d12448cf82c0a39dbd.json  target-appresourceEditor_other_files-Debug-d0df7c0eb7b3863c8d6a.json
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-c32908af50f15b580809.json  cmakeFiles-v1-0b7d92da6fcf0025afdb.json  codemodel-v2-38276d6f87fcd88d78a9.json  index-2023-11-30T03-00-57-0549.json  target-all_qmltyperegistrations-Debug-68cf2a7691d816ca6b95.json  target-appresourceEditor-Debug-1e09c0a4a381992d8045.json  target-appresourceEditor_autogen-Debug-c2b69a7cd298789d9ee1.json  target-appresourceEditor_autogen_timestamp_deps-Debug-c6bbe82d851167cbf840.json  target-appresourceEditor_qmlimportscan-Debug-7260c8ea7a38046af768.json  target-appresourceEditor_qmllint-Debug-aa9c5cf94172cce65680.json  target-appresourceEditor_qmllint_json-Debug-cc9a333f6a3fb213c984.json  target-appresourceEditor_qmltyperegistration-Debug-112c7cfefa53a55a7613.json  target-appresourceEditor_tooling-Debug-cbf318a1fc5e9a0a27f1.json
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/deploy_qml_imports/: appresourceEditor.cmake
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_appresourceEditor.cmake  Qt6_QmlPlugins_Imports_appresourceEditor.rsp
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QGuiApplication.FC0FDEEB6A7254FC.idx  QMetaType.8C74556CE1FC7AD8.idx  QUrl.9F4C320E6BCE5C09.idx  __msvc_bit_utils.hpp.EE4CC99CF25BE54C.idx  __msvc_chrono.hpp.E2B7F3C2D718E9DD.idx  __msvc_iter_core.hpp.2C2B5BE5B8237874.idx  algorithm.B29DA8E82A13B4A7.idx  bmiintrin.h.9213D36D94BCABCF.idx  cctype.883F8DF45AC8B247.idx  cerrno.221967A76904DA7B.idx  cfloat.3934FDD85EF5F5CA.idx  climits.BDBCD8DE127BED1B.idx  cmath.B064738C6F771C15.idx  concurrencysal.h.7A53BC525391A991.idx  corecrt_malloc.h.D8408B5A87C7342E.idx  corecrt_memcpy_s.h.CCE1C5681623EEA0.idx  corecrt_share.h.CBCE3BD5424E753B.idx  corecrt_terminate.h.982AA72424D0CA88.idx  corecrt_wconio.h.788E71AF0555AD48.idx  corecrt_wctype.h.AE5C54E104CE5023.idx  corecrt_wstdlib.h.55CD508BD44750E6.idx  corecrt_wstring.h.6A95D24E2892FC39.idx  corecrt_wtime.h.71A42A992E9286C1.idx  cstdio.2E88C6FE43A6D494.idx  cstdlib.63B67F9B9B61174D.idx  cstring.9C61C8B3F0467E97.idx  ctype.h.5B110B757D81C924.idx  cwchar.F3A111FE109FBD30.idx  eh.h.9774E29F7C9C8FE4.idx  exception.E6438AC877795F7B.idx  immintrin.h.1599B55A2409D9F9.idx  intrin.h.CF917AB3E287604A.idx  iosfwd.60D14B43D390E9F0.idx  limits.h.6C65C9B567907878.idx  main.cpp.3E863A59C834F04C.idx  malloc.h.9AECFF7A74F50058.idx  map.384A681CC045E59F.idx  mm_malloc.h.A0351529D7EF90C9.idx  (+92 more)
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/: qmake_resourceEditor.qrc  qrc_appresourceEditor_raw_qml_0.cpp  qrc_qmake_resourceEditor.cpp  viewer.qrc
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/qmlcache/: appresourceEditor_libriry_qml.cpp  appresourceEditor_main_qml.cpp  appresourceEditor_qmlcache_loader.cpp  appresourceEditor_searchLine_qml.cpp  appresourceEditor_showArea_qml.cpp  appresourceEditor_tools_qml.cpp
App/build-MXResource-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/appresourceEditor_autogen/: deps
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  apptimelineEditor.exp  apptimelineEditor.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt/deploy_qml_imports/: apptimelineEditor.cmake
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qt_plugins/: Qt6_QmlPlugins_Imports_apptimelineEditor.rsp
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/: qmake_timelineEditor.qrc  qrc_qmake_timelineEditor.cpp
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/.rcc/qmlcache/: apptimelineEditor_Clip_qml.cpp  apptimelineEditor_TimeScale_qml.cpp  apptimelineEditor_TrackHead_qml.cpp  apptimelineEditor_main_qml.cpp
App/build-MXTimeline-Desktop_Qt_6_4_3_MSVC2019_64bit-Debug/apptimelineEditor_autogen/: deps
Core/MXRender/: CMakeLists.txt  DecodeVideo.cpp  DecodeVideo.h  MXRenderTest.cpp  MXRenderTest.h  VideoInfo.cpp  VideoInfo.h
Core/MXRender/example/: CMakeLists.txt  decodeEx.cpp
Core/MXRender/include/: DecodeVideo.h
Core/MXRender/test/: CMakeLists.txt  MXRenderTest.cpp
Core/MXUtility/: CMakeLists.txt  MXSpdLog.cpp
Core/MXUtility/include/: GlobalDef.h  MXSpdLog.h  Singleton.h
Core/MXUtility/src/: MXSpdLog.cpp
Core/UnitTest/: CMakeLists.txt  MXRenderTest.cpp
(+148 files in other folders)
